tests/ternary/valid/nested_ternary_2.amu
main :: () -> s32 {
    a:s32 = if(1) if(2) 3 else 4  else 5;
    b:s32 = if(0)(if(2)(3)else(4))else(5);
    return a * b;
}