tests/ternary/invalid/malformed_ternary.amu
s32 main() {
    return if(1) 2 else 3 else 4;
}